# math-pdf-manager

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  AUDIT_REPORT.md  CURRENT_SYSTEM_STATUS.md  ELSEVIER_ULTRATHINK_SUMMARY.md  FINAL_ACHIEVEMENT_REPORT.py  FINAL_COMPREHENSIVE_ACHIEVEMENT.md  FINAL_FRESH_SUMMARY.md  FINAL_PROOF.py  FINAL_QUICK_PROOF.py  FINAL_VERIFICATION.py  FRESH_PDF_TEST.py  GENERAL_AUDIENCE_OVERVIEW.md  IEEE_SYSTEM_DOCUMENTATION.md  LICENSE  README.md  REORGANIZATION_GUIDE.md  REORGANIZATION_PLAN.md  RESTORE_FROM_BACKUP_20250726_232945.sh  ROBUST_TEST_SUMMARY.md  TECHNICAL_REFERENCE.md  actually_click_connect.py  actually_working_wiley.py  api_access_analysis.py  bootstrap-latex-cache.zsh  cisco_connect_fixed.py  cisco_simple_fix.py  cli_advanced_vpn.py  cli_vpn_connect.py  debug_cisco_window.py  debug_siam.py  debug_wiley.py  debug_wiley_detailed.py  debug_wiley_institution.py  detailed_failure_analysis.py  elsevier_browser_automation.py  elsevier_cookie_approach.py  (+88 more)
.archive/legacy/: main_di_helpers.py  main_secure.py  parsers.py
.claude/plans/: fluttering-sparking-lollipop-agent-a9fcea0f6d3e8b624.md
.github/workflows/: ci.yml
.hypothesis/constants/: 00472a94022117b0  070fce30a0722219  07dff5676d72fd51  08676d447008ee3a  088c2e01b98b7938  0aeb5aa3cf2d3913  0e7ae7db3d2779a3  0f6ffb1c8598e374  0ffd8ebf191e50f9  1079baa7819a382c  14efb5d916c568bd  16e5246ce68afcf5  1b4b95492c78ab1e  1db61a8ab61fa8dd  250f128c8674ab32  2ff675cbde72d740  36a5d51b360dacdb  38c6963c950082ef  3afcc71de613bb15  40916a490f320ac6  443f717daef76763  477b40c43ed459d9  48265abb72c8ddc8  48ddbcc60a850d39  4d71ea1749385009  53cd0eb063a08f88  595d94158845bbc1  59bd048691eadf80  5b1803e175d758bf  64a154587f5094cb  65816cf53a58640c  681e90129db862ca  6ad97599666d537f  6b2739b6929a1cbe  6beb52dc631b8d16  7075c85d8f1c3970  7710c09c77b740f0  775f8e225f23cb4c  8005cf1b80744614  80f04c230fb9af93  (+30 more)
archive/benchmarks/: benchmark_async.py  quick_benchmark.py  simple_benchmark.py
archive/compressed-old-debugging/: debug_ieee_actual.py  debug_ieee_stamp_page.py  find_ieee_institutional.py  fix_ieee_modal.py  ieee_complete_test.py  ieee_final_working.py  test_ieee_auth_full.py  test_ieee_debug.py  test_ieee_fixed.py  test_ieee_headless.py  test_ieee_pdf_access.py  test_ieee_selector.py  test_ieee_simple.py  test_ieee_step_by_step.py  test_ieee_visual.py  test_ieee_working.py
archive/debugging/: click_download_button.py  debug_siam_page.py  fix_eth_click.py
archive/historical_reports/: CLEANUP_SUMMARY.md  COMPLETE_TEST_RESULTS_SUMMARY.md  DI_INTEGRATION_COMPLETE_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_DI_AUDIT_REPORT.md  PHASE1_WEEK1_DAY1-2_COMPLETE.md  PHASE1_WEEK1_DAY3-4_COMPLETE.md  PHASE1_WEEK1_DAY5_COMPLETE.md  SECOND_CLEANUP_COMPLETE.md  TESTING_SUMMARY.md  TEST_FIXES_COMPLETE_SUMMARY.md  TRANSFORMATION_COMPLETE_SUMMARY.md  ULTRATHINK_SESSION_COMPLETE.md
archive/implementation_scripts/: comprehensive_validation_consolidation.py  comprehensive_validation_fix.py  config_unification_audit.py  config_unification_implementation.py  critical_import_fixes.py  validation_consolidation_migration.py  validation_consolidation_summary.py  validation_usage_audit.py
archive/legacy_assets/: anna_debug_sample.html  wayf_page_source.html
archive/legacy_scripts/: final_ultra_connect.py  final_wiley_downloader.py  ultimate_100_percent.py  ultimate_100_percent_final.py  ultimate_400_test.py  ultimate_all_publishers_downloader.py  ultimate_demo.py  ultimate_downloader_v2.py  ultimate_publisher_downloader.py  ultimate_working_downloader.py
archive/obsolete_src/: container.py.backup  core_validation.py.backup  unified_validator.py.backup
archive/proof_api_responses/: api_response_api.crossref.org.json
archive/proof_scripts/: complete_ieee_with_credentials.py  demo_real_downloads.py  direct_pdf_extraction.py  download_pdf_after_auth.py  final_comprehensive_test.py  final_ieee_debug.py  fully_automatic_ieee_download.py  prove_complete_ieee.py  prove_ieee_system_works.py  prove_ieee_works.py
archive/reports/: AUDIT_SUMMARY.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_CLEANING_COMPLETE.md  COMPREHENSIVE_CLEANUP_PLAN.md  COMPREHENSIVE_PROJECT_SUMMARY.md  CORRECTED_TEST_AUDIT_REPORT.md  DI_TO_SERVICE_LOCATOR_MIGRATION_STRATEGY.md  FINAL_CLEANUP_COMPLETE.md  HONEST_AUDIT_AND_ULTRATHINK_PLAN.md  (+16 more)
config/: config.yaml  download_stats.json  pyproject.toml  requirements-security.txt  requirements.txt  watcher.yaml
data/: .DS_Store_1  baseline_analysis_full.txt  cleanup_report_20250719_063529.json  exceptions.txt  function_mapping.txt  known_authors_1.txt  known_words.txt  known_words_1.txt  multiword_familynames.txt  multiword_familynames_1.txt  name_dash_whitelist.txt  name_dash_whitelist_1.txt
docs/: COMPLIANCE_GAP_ANALYSIS.md  COMPREHENSIVE_SECURITY_AUDIT_1.md  FILENAME_CONVENTION.md  PROJECT_OVERVIEW.md  REFACTOR_MASTER_PLAN.md  TEST_AUDIT.md  maths_folder_structure_1.txt  unicode_fixes_summary_1.md
examples/: comprehensive_demo.py
mathpdf/: __init__.py  main.py
proof_downloads/: api_response_api.semanticscholar.org.json  api_response_api.unpaywall.org.json  elsevier_response_3.html
scripts/: bootstrap_env.sh  install_watcher.sh  install_weekly_maintenance.sh  run_scheduler.py
src/: __init__.py  async_metadata_fetcher.py  automated_eth_setup.py  constants.py  duplicate_detector.py  file_operations.py  grobid_ocr_integration.py  main.py  main_async.py  main_simplified.py  metadata_fetcher.py  reporter.py  scanner.py  secure_credential_manager.py  utils.py
src/cli/: io.py  (+2 more)
templates/: daily_digest.html
tests/: conftest.py  test_async_metadata_fetcher_hell.py  test_download_sources_comprehensive.py  test_metadata_fetcher_hell.py  test_performance_hell.py  test_publisher_hell_paranoia.py  test_security_vulnerabilities_hell.py
(+5056 files in other folders)
